exports[`(.not).toHaveMultiStatusStatus > using axios > .not.toHaveMultiStatusStatus > fails when response have status code 207 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMultiStatusStatus()</intensity>

Expected status code to not be 207 received:
  <red>207</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 207,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMultiStatusStatus > using axios > .toHaveMultiStatusStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMultiStatusStatus()</intensity>

Expected status code to be 207 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMultiStatusStatus > using got > .not.toHaveMultiStatusStatus > fails when response have status code 207 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMultiStatusStatus()</intensity>

Expected status code to not be 207 received:
  <red>207</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 207,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveMultiStatusStatus > using got > .toHaveMultiStatusStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMultiStatusStatus()</intensity>

Expected status code to be 207 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
